fix overflow

--- a/app/assets/stylesheets/ci_styles.css.scss
+++ b/app/assets/stylesheets/ci_styles.css.scss
@@ -76,8 +76,9 @@ ul.nav {margin-left:-30px !important;}
   background-repeat: no-repeat;
   padding-top: 11px;
   // min-height: 300px;
-  // overflow: hidden;
+  overflow: hidden;
   // margin-bottom:40px;
+  // border:1px solid red;
   
 }
 
